fix: tiny scrollbar in single line results

--- a/src/Types.css
+++ b/src/Types.css
@@ -1,6 +1,7 @@
 .type {
   display: inline-block;
   line-height: 1.2rem;
+  min-height: 1.2rem;
 }
 
 .type + .type {
